# AI_Agent_notes

./: README.md  main.py  pyproject.toml  requirements.txt
1. Basic-Chatbot/: 1.basic-chatbot.ipynb  weather.py
2. Debugging-and-Monitoring/: agent.py
3. Multi-AI-Agents/: 3.multi-ai-agents.ipynb
4. MultiModel-RAG/: 4.multimodal-rag.ipynb
AI Agent tutorial/1. Basic-Chatbot/: client.py  mathserver.py
